test/should-fail/vsgc1218.f3
/*
 * @test/compile-error
 */
function func(g:Void):Void{
}
